Fixing quote spacing

--- a/src/plugins/widgets/quote/Quote.sass
+++ b/src/plugins/widgets/quote/Quote.sass
@@ -1,11 +1,12 @@
 .Quote
-    overflow: hidden
-    min-height: 18vh
-    max-height: 25vh
-
-    h4
-        line-height: 1.25 !important
-        visibility: visible
+    overflow-y: hidden
+    max-height: 33vh
 
     &:hover
         overflow-y: auto
+
+    h4
+        line-height: 1.25 !important
+
+    sub
+        bottom: 0
